<resources>
    <string name="app_name">NoteTakingApp</string>
    <string name="attention">Attention</string>
    <string name="back_button">Back</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="no_task_description">Oops!\nNo note in the inventory.\nTap + to add.</string>
    <string name="edit_task_title">Edit Note</string>
    <string name="task">Note</string>
    <string name="task_detail_title">Note Details</string>
    <string name="note_entry_title">Add Note</string>
    <string name="Note_title_req">Note Title*</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="note_content_req">Note Content*</string>
    <string name="save_action">Save</string>
    <string name="required_fields">*required fields</string>
    <string name="dark_mode_toggle">Dark Mode</string>
    <string name="light_mode_toggle">Light Mode</string>

</resources>