...
            Switch(checked = uiState.isDarkMode,
                    onCheckedChange = selectTheme,
                thumbContent = if(uiState.isDarkMode){
                    {
                        Icon(
                            imageVector = Icons.Sharp.Check,
                            contentDescription = "DarkMode",
                            modifier = Modifier.size(SwitchDefaults.IconSize)
                        )
                    }
                }else{
                    {
                    Icon(imageVector = Icons.Sharp.Close,
                        contentDescription = "LightMode",
                        modifier = Modifier.size(SwitchDefaults.IconSize))
                }
                })
        }
    )
}
